--- a/dada/extras/documentation/pod_source/changes_8_x.pod
+++ b/dada/extras/documentation/pod_source/changes_8_x.pod
@@ -4,6 +4,18 @@
 
 =head1 Dada Mail Changelog for v8.x
 
+=head2 8.2.0
+
+=head2 Features
+
+=head3 Recurring Schedules
+
+Recurring Schedules have been integrated into the core of Dada Mail, having only been available before in the now retired Beatitude plugin. Set a beginning and end date of your mass mailings, the time they should all go out, and the days of the week that they should be sent. 
+
+More information on Schedules, but single and recurring can be found here: 
+
+L<http://dadamailproject.com/d/features-scheduled_mass_mailings.pod.html>
+
 =head2 8.1.0
 
 =head2 Summary
